--- a/index.html
+++ b/index.html
@@ -9,70 +9,41 @@
 		</div>
 		<div class="linkbar">
 			<a class="blink" href="g_download.html">Download</a>
-			<a class="blink" href="g_faq.html">FAQ</a>
-			<a class="blink" href="g_bugtracker.html">Bug reports</a>
-			<a class="blink" href="about:blank">Screenshots</a>
-			<a class="blink" href="g_registration.html">Register (QA)</a>
+			<a class="blink" href="https://discord.com/channels/1261272852385235018/1261655577084301393">FAQ</a>
+			<a class="blink" href="https://discord.com/channels/1261272852385235018/1261645258790277171">Bug reports</a>
+			<a class="blink" href="https://discord.com/channels/1261272852385235018/1261655765631107122">Screenshots</a>
+			<a class="blink" href="g_registration.html">Register (NEXUS CONNECT PRO)</a>
 			<a class="blink" href="g_changelog.html">Changelogs</a>
 		</div>
 		<br>
 		<br>
-		
-		
-		<div class="mwidthsection">
-			<div class="login">
-				Please log in here with your Minecraft account to enable download links. (JavaScript must be enabled)<br><br>
-				<div class="login2">
-					Unable to connect to main servers.<br>
-					Check if JavaScript support is enabled in your browser.<br>
-					Try refreshing the page.
-				</div>
-			</div>
-		</div>
 
 		<div class="content">
 			<br>
 			<br>
-			Extension 16.05 brings you a new Minecraft experience.
 
 			<h2>
 				BUILD
 			</h2>
 			using new blocks.
 			<br>
-			Check out some of our players' builds <a href="about:blank">here</a>
+			Check out some of our players' builds <a href="https://discord.com/channels/1261272852385235018/1261656170352083080">here</a>
 
 			<br><br>
 			<h2>
-				SURVIVE
-			</h2>
-			Ext16.05 brings you new items to help you survive, as well as difficulty enhancements for a harder experience.
-			<br>
-			<img class="image" src="img2.png"></img>
 
 			<br><br>
 			<h2>
-				EXPLORE
-			</h2>
-			the world to see and uncover many new materials and events! Sky's the limit!
-			<br>
-			<img class="image" src="img0.png"></img>
 
 			<br><br>
 			<h2>
 				CONNECT
 			</h2>
-			with players from all over the world via the mysterious doors that may sometimes appear in the world!
+			with players from all over the world via the mysterious nexus rift
 			<br>
-			<img class="image" src="img1.png"></img>
 
 			<br><br>
 			<h2>
-				FIGHT
-			</h2>
-			new and horrifying creatures that will pose a challenge to even the best Minecraft players!
-			<br>
-			<img class="image" src="img3.png"></img>
 		</div>
 
 		<div class="footer">
