--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
 		<link rel="stylesheet" href="style.css">
-		<title>Extension 16.05</title>
+		<title>NEXUSMC 1.0.4</title>
 	</head>
 	<body>
 		<div class="headtag">
