--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <html>
 	<head>
 		<link rel="stylesheet" href="style.css">
-		<title>NEXUSMC 1.0.4</title>
+		<title>NEXUS MC 1.0.4</title>
 	</head>
 	<body>
 		<div class="headtag">
-			<h1>Minecraft Alpha Version 1.0.16<br> Extension 16.05</h1>
+			<h1>NEXUS MC<br>connect the world</h1>
 		</div>
 		<div class="linkbar">
 			<a class="blink" href="g_download.html">Download</a>
