--- a/g_changelog.html
+++ b/g_changelog.html
@@ -1,20 +1,19 @@
 <html>
 	<head>
 		<link rel="stylesheet" href="style.css">
-		<title>Extension 16.05</title>
+		<title>NEXUS MC 1.0.4</title>
 
 		<script src="avkeys.js"></script>
 	</head>
 	<body>
 		<div class="headtag">
-			<a class="ret" href="index.html"><h1>Minecraft Alpha Version 1.0.16<br> Extension 16.05</h1></a>
+			<a class="ret" href="index.html"><h1>NEXUS MC<br>connect the world</h1></a>
 		</div>
 		<div class="linkbar">
 			<a class="blink" href="g_download.html">Download</a>
-			<a class="blink" href="g_faq.html">FAQ</a>
-			<a class="blink" href="g_bugtracker.html">Bug reports</a>
-			<a class="blink" href="about:blank">Screenshots</a>
-			<a class="blink" href="g_registration.html">Register (QA)</a>
+			<a class="blink" href="https://discord.com/channels/1261272852385235018/1261655577084301393">FAQ</a>
+			<a class="blink" href="https://discord.com/channels/1261272852385235018/1261645258790277171">Bug reports</a>
+			<a class="blink" href="https://discord.com/channels/1261272852385235018/1261655765631107122">Screenshots</a>
 			Changelogs
 		</div>
 		<br>
