--- a/g_download.html
+++ b/g_download.html
@@ -1,44 +1,31 @@
 <html>
 	<head>
 		<link rel="stylesheet" href="style.css">
-		<title>Extension 16.05</title>
+		<title>NEXUS MC 1.0.4</title>
 
+		<script src="avkeys.js"></script>
 	</head>
 	<body>
 		<div class="headtag">
-			<a class="ret" href="index.html"><h1>Minecraft Alpha Version 1.0.16<br> Extension 16.05</h1></a>
+			<a class="ret" href="index.html"><h1>NEXUS MC<br>connect the world</h1></a>
 		</div>
 		<div class="linkbar">
-			Download
-			<a class="blink" href="g_faq.html">FAQ</a>
-			<a class="blink" href="g_bugtracker.html">Bug reports</a>
-			<a class="blink" href="about:blank">Screenshots</a>
-			<a class="blink" href="g_registration.html">Register (QA)</a>
-			<a class="blink" href="g_changelog.html">Changelogs</a>
+			<a class="blink" href="g_download.html">Download</a>
+			<a class="blink" href="https://discord.com/channels/1261272852385235018/1261655577084301393">FAQ</a>
+			<a class="blink" href="https://discord.com/channels/1261272852385235018/1261645258790277171">Bug reports</a>
+			<a class="blink" href="https://discord.com/channels/1261272852385235018/1261655765631107122">Screenshots</a>
+			Changelogs
 		</div>
 		<br>
 		<br>
 		
-		
-		<div class="mwidthsection">
-			<div class="login">
-				Please log in here with your Minecraft account to enable download links. (JavaScript must be enabled)<br><br>
-				<div class="login2">
-					Unable to connect to main servers.<br>
-					Check if JavaScript support is enabled in your browser.<br>
-					Try refreshing the page.
-				</div>
-			</div>
-		</div>
+
 
 		<div class="content">
 			<h2>Download</h2>
 			<div class="recruitment">
 				Reminder: this version is not to be disclosed; any recordings and/or screenshots outside of the bug tracker are prohibited.
 			</div>
-			<br><br>
-			Download the launcher <a href="about:blank">here</a>.<br> It should automatically receive the latest updates. If not, install the update manually.
-			<br>
 			<br>
 			<a href="about:blank">Manual download</a>
 
