--- a/g_download.html
+++ b/g_download.html
@@ -10,7 +10,7 @@
 			<a class="ret" href="index.html"><h1>NEXUS MC<br>connect the world</h1></a>
 		</div>
 		<div class="linkbar">
-			<a class="blink" href="g_download.html">Download</a>
+			<a class="blink" href="https://discord.com/channels/1261272852385235018/1261659081249128499">Download</a>
 			<a class="blink" href="https://discord.com/channels/1261272852385235018/1261655577084301393">FAQ</a>
 			<a class="blink" href="https://discord.com/channels/1261272852385235018/1261645258790277171">Bug reports</a>
 			<a class="blink" href="https://discord.com/channels/1261272852385235018/1261655765631107122">Screenshots</a>
