just 1 single letter

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	</head>
 	<body>
 		<div class="headtag">
-			<h1>NEXUS MC<br>connect the world</h1>
+			<h1>NEXUS MC<br>Connect the world</h1>
 		</div>
 		<div class="linkbar">
 			<a class="blink" href="https://discord.com/channels/1261272852385235018/1261659819710873631">Download</a>
