--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 		</div>
 		<div class="linkbar">
 			<a class="blink" href="about:blank">Download</a>
-			<a class="blink" href="https://discord.com/channels/1261272852385235018/1261655577084301393">FAQ</a>
-			<a class="blink" href="https://discord.com/channels/1261272852385235018/1261645258790277171">Bug reports</a>
-			<a class="blink" href="https://discord.com/channels/1261272852385235018/1261655765631107122">Screenshots</a>
-			<a class="blink" href="https://discord.com/channels/1261272852385235018/1261659081249128499">Changelogs</a>
+			<a class="blink" href="about:blank">FAQ</a>
+			<a class="blink" href="about:blank">Bug reports</a>
+			<a class="blink" href="about:blank">Screenshots</a>
+			<a class="blink" href="about:blank">Changelogs</a>
 		</div>
 		<br>
 		<br>
