--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			</h2>
 			using new blocks.
 			<br>
-			Check out some of our players' builds <a href="https://discord.com/channels/1261272852385235018/1261656170352083080">here</a>
+			Check out some of our players' builds <a href="about:blank">here</a>
 
 			<br><br>
 			<h2>
