--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <div id="wb_Image1" style="position:absolute;left:0px;top:0px;width:1919px;height:1014px;z-index:0;">
-<img src="images/.4.PNG" id="Image1" alt=""></div>
+<img src="images/4.PNG" id="Image1" alt=""></div>
 <div id="wb_Image2" style="position:absolute;left:670px;top:126px;width:652px;height:125px;z-index:1;">
 <img src="images/Nexus-MC.png" id="Image2" alt=""></div>
 <div id="wb_Text1" style="position:absolute;left:781px;top:338px;width:581px;height:76px;z-index:2;">
@@ -64,5 +64,7 @@
 <div id="wb_Text6" style="position:absolute;left:1471px;top:650px;width:288px;height:32px;z-index:28;">
 <span style="color:#A9A9A9;font-family:Arial;font-size:13px;">website made by Dev7&nbsp; </span><span style="color:#4169E1;font-family:Arial;font-size:13px;"><u>https://www.youtube.com/@Dev7_NexusMC</u></span></div>
 <input type="submit" id="Button5" onclick="window.location.href='https://www.youtube.com/@Dev7_NexusMC';return false;" name="" value="" style="position:absolute;left:1471px;top:670px;width:257px;height:12px;z-index:29;">
+<div id="wb_Image18" style="position:absolute;left:446px;top:48px;width:212px;height:44px;z-index:30;">
+<a href="#" onclick="window.location.href='./download.html';return false;"><img src="images/download_now.png" id="Image18" alt=""></a></div>
 </body>
 </html>
