--- a/page1.html
+++ b/page1.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <div id="wb_Image1" style="position:absolute;left:0px;top:0px;width:1919px;height:979px;z-index:0;">
-<img src="images/.4.PNG" id="Image1" alt=""></div>
+<img src="images/4.PNG" id="Image1" alt=""></div>
 <div id="wb_Image2" style="position:absolute;left:0px;top:134px;width:417px;height:80px;z-index:1;">
 <img src="images/Nexus-MC.png" id="Image2" alt=""></div>
 <div id="wb_Image4" style="position:absolute;left:10px;top:208px;width:116px;height:10px;z-index:2;">
