--- a/page2.html
+++ b/page2.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <div id="wb_Image1" style="position:absolute;left:0px;top:0px;width:1919px;height:974px;z-index:0;">
-<img src="images/.4.PNG" id="Image1" alt=""></div>
+<img src="images/4.PNG" id="Image1" alt=""></div>
 <div id="wb_Text2" style="position:absolute;left:703px;top:51px;width:159px;height:32px;z-index:1;">
 <span style="color:#D2691E;font-family:Arial;font-size:27px;"><u>Screenshots</u></span></div>
 <div id="wb_Text3" style="position:absolute;left:917px;top:51px;width:141px;height:32px;z-index:2;">
@@ -19,7 +19,7 @@
 <div id="wb_Image2" style="position:absolute;left:0px;top:126px;width:1919px;height:848px;z-index:4;">
 <img src="images/end.png" id="Image2" alt=""></div>
 <div id="wb_Image4" style="position:absolute;left:704px;top:234px;width:510px;height:506px;z-index:5;">
-<img src="images/.2.PNG" id="Image4" alt=""></div>
+<img src="images/2.PNG" id="Image4" alt=""></div>
 <div id="wb_Text1" style="position:absolute;left:713px;top:246px;width:138px;height:19px;z-index:6;">
 <span style="color:#FFFFFF;font-family:Arial;font-size:17px;">Can't leave hub</span></div>
 <div id="wb_Text5" style="position:absolute;left:842px;top:247px;width:57px;height:16px;z-index:7;">
