--- a/success.html
+++ b/success.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <div id="wb_Image1" style="position:absolute;left:0px;top:0px;width:1919px;height:976px;z-index:0;">
-<img src="images/.4.PNG" id="Image1" alt=""></div>
+<img src="images/4.PNG" id="Image1" alt=""></div>
 <div id="wb_Text2" style="position:absolute;left:707px;top:49px;width:157px;height:32px;z-index:1;">
 <span style="color:#D2691E;font-family:Arial;font-size:27px;"><u>Screenshots</u></span></div>
 <input type="button" id="Button1" onclick="window.location.href='./page1.html';return false;" name="" value="" style="position:absolute;left:707px;top:53px;width:157px;height:25px;z-index:2;">
