--- a/index.html
+++ b/index.html
@@ -66,5 +66,8 @@
 <input type="submit" id="Button5" onclick="window.location.href='https://www.youtube.com/@Dev7_NexusMC';return false;" name="" value="" style="position:absolute;left:1471px;top:670px;width:257px;height:12px;z-index:29;">
 <div id="wb_Image18" style="position:absolute;left:446px;top:48px;width:212px;height:44px;z-index:30;">
 <a href="#" onclick="window.location.href='./download.html';return false;"><img src="images/download_now.png" id="Image18" alt=""></a></div>
+<div id="wb_Text8" style="position:absolute;left:1781px;top:834px;width:92px;height:16px;z-index:31;">
+<span style="color:#000000;font-family:Arial;font-size:13px;">Click me</span></div>
+<input type="submit" id="Button6" onclick="window.location.href='./page6.html';return false;" name="" value="" style="position:absolute;left:1781px;top:834px;width:56px;height:16px;z-index:32;">
 </body>
 </html>
