--- a/report.html
+++ b/report.html
@@ -56,11 +56,11 @@
 <div id="wb_Image21" style="position:absolute;left:848px;top:381px;width:96px;height:94px;z-index:32;">
 <img src="images/bg_main.png" id="Image21" alt=""></div>
 <div id="wb_Form2" style="position:absolute;left:776px;top:326px;width:341px;height:259px;z-index:33;">
-<form name="contact" method="post" action="https://nexusmc.netlify.app/.netlify/functions/report" enctype="text/plain" id="Form2">
+<form name="contact" method="post" action="mailto:nexusmcreports@proton.me?subject=Support Query" enctype="text/plain" id="Form2">
 <select name="Type" size="1" id="Combobox1" style="position:absolute;left:126px;top:13px;width:200px;height:28px;z-index:0;">
-<option value="1">Glitch</option>
-<option value="2">Small</option>
-<option value="3">breaking game</option>
+<option>Glitch</option>
+<option>Small</option>
+<option>breaking game</option>
 <option>Lagging</option>
 </select>
 <label for="Editbox2" id="Label3" style="position:absolute;left:15px;top:48px;width:64px;height:16px;line-height:16px;z-index:1;">Email:</label>
