--- a/report.html
+++ b/report.html
@@ -98,7 +98,7 @@
 <option>breaking game</option>
 <option>Lagging</option>
 </select>
-<label for="Editbox2" id="Label3" style="position:absolute;left:15px;top:48px;width:64px;height:16px;line-height:16px;z-index:1;">Email:</label>
+<label for="Editbox2" id="Label3" style="position:absolute;left:15px;top:48px;width:64px;height:16px;line-height:16px;z-index:1;"> your email:</label>
 <input type="email" id="Editbox2" style="position:absolute;left:126px;top:47px;width:190px;height:16px;z-index:2;" name="email" value="email..." spellcheck="false">
 <label for="TextArea1" id="Label4" style="position:absolute;left:15px;top:79px;width:64px;height:16px;line-height:16px;z-index:3;">Message:</label>
 <textarea name="Report" id="TextArea1" style="position:absolute;left:126px;top:79px;width:190px;height:90px;z-index:4;" rows="4" cols="29" spellcheck="false">Enter message....</textarea>
