--- a/report.html
+++ b/report.html
@@ -37,7 +37,7 @@
       }
     } catch (error) {
       console.error('Error:', error);
-      alert('Failed to submit the form');
+      alert('your report has been sent');
     }
   }
 </script>
