--- a/page2.html
+++ b/page2.html
@@ -23,11 +23,11 @@
 <div id="wb_Text1" style="position:absolute;left:713px;top:246px;width:138px;height:19px;z-index:6;">
 <span style="color:#FFFFFF;font-family:Arial;font-size:17px;">Can't leave hub</span></div>
 <div id="wb_Text5" style="position:absolute;left:842px;top:247px;width:57px;height:16px;z-index:7;">
-<span style="color:#DAA520;font-family:Arial;font-size:13px;">Fixing</span></div>
+<span style="color:#DAA520;font-family:Arial;font-size:13px;">Fixed</span></div>
 <div id="wb_Text18" style="position:absolute;left:713px;top:278px;width:362px;height:19px;z-index:8;">
 <span style="color:#FFFFFF;font-family:Arial;font-size:17px;">Getting teleported to admin world</span></div>
 <div id="wb_Text19" style="position:absolute;left:970px;top:279px;width:57px;height:16px;z-index:9;">
-<span style="color:#DC143C;font-family:Arial;font-size:13px;">Not fixed</span></div>
+<span style="color:#DC143C;font-family:Arial;font-size:13px;">fixed</span></div>
 <div id="wb_Image8" style="position:absolute;left:823px;top:175px;width:273px;height:35px;z-index:10;">
 <img src="images/bugreports.png" id="Image8" alt=""></div>
 <input type="submit" id="Button2" onclick="window.location.href='./index.html';return false;" name="" value="" style="position:absolute;left:917px;top:55px;width:77px;height:25px;z-index:11;">
