Aktualisieren von Index.html

--- a/null/Index.html
+++ b/null/Index.html
@@ -87,7 +87,7 @@
   <div class="error-box">
     <h1>600</h1>
     <h2>Site Temporarily Shutdown</h2>
-    <p>This site has been temporarily shutdown by the Agency of Device Security due to anomalous behavior detected in recent activity. Please check back later.</p>
+    <p>This site has been temporarily shutdown by the Agency of Device Security due to anomalous behavior</p>
     <p class="exact-error-code"><strong>Code</strong> -18151520</p>
     <p class="notice">Notice: Unauthorized attempts to access may be monitored and reported.</p>
   </div>
