--- a/null/Index.html
+++ b/null/Index.html
@@ -88,7 +88,7 @@
     <h1>600</h1>
     <h2>Site Temporarily Shutdown</h2>
     <p>This site has been temporarily shutdown by the Agency of Device Security due to anomalous behavior.</p>
-    <p class="exact-error-code"><strong>Code</strong> -18151520</p>
+    <p class="exact-error-code"><strong>Code</strong> 504c4159455253</p>
     <p class="notice">Notice: Unauthorized attempts to access may be monitored and reported.</p>
   </div>
 
